Created first version of Car and Parking models in ParkingLots

--- a/FreePlace.API/FreePlace.API.csproj
+++ b/FreePlace.API/FreePlace.API.csproj
@@ -18,6 +18,11 @@
     </ItemGroup>
 
     <ItemGroup>
+      <Folder Include="ParkingLots\Controllers" />
+      <Folder Include="ParkingLots\Mapping" />
+      <Folder Include="ParkingLots\Persistence" />
+      <Folder Include="ParkingLots\Resources" />
+      <Folder Include="ParkingLots\Services" />
       <Folder Include="Shared" />
     </ItemGroup>
 
