--- a/FreePlace.API/FreePlace.API.csproj
+++ b/FreePlace.API/FreePlace.API.csproj
@@ -23,7 +23,12 @@
       <Folder Include="ParkingLots\Persistence" />
       <Folder Include="ParkingLots\Resources" />
       <Folder Include="ParkingLots\Services" />
-      <Folder Include="Shared" />
+      <Folder Include="Shared\Controllers" />
+      <Folder Include="Shared\Domain" />
+      <Folder Include="Shared\Extensions" />
+      <Folder Include="Shared\Mapping" />
+      <Folder Include="Shared\Persistence" />
+      <Folder Include="Shared\Resources" />
     </ItemGroup>
 
 </Project>
