feat(user): Added User to the project

--- a/FreePlace.API/FreePlace.API.csproj
+++ b/FreePlace.API/FreePlace.API.csproj
@@ -18,8 +18,7 @@
     </ItemGroup>
 
     <ItemGroup>
-      <Folder Include="Shared\Controllers" />
-      <Folder Include="Shared\Resources" />
+      <Folder Include="Booking" />
     </ItemGroup>
 
 </Project>
